# speechUp-IA

./: .env  .gitignore  .pre-commit-config.yaml  README.md  app.py  config.py  metrics_all.csv  pyproject.toml  requirements.txt  resultados_analisis.json  start_api.ps1  test_import.py  test_realtime_client.py  test_video_websocket.py  test_websocket_client.py
.github/workflows/: lint.yml
api/: __init__.py  formatters.py  main.py
api/core/: exception_handlers.py  logging.py  middleware.py
audio/: __init__.py  analyzer.py  asr.py  audio_analyzer.py  audio_utils.py  constants.py  emotion.py  extractors.py  metrics.py  model_loader.py  processors.py  prosody.py  recognition.py  speech.py  text_metrics.py
backups/: pipeline_20250830_175055.py.bak  pipeline_20250830_180159.py.bak  pipeline_20250830_180620.py.bak
core/: __init__.py
fixtures/: analysis_v1_example.json
tests/: _helpers.py  collect_all_metrics.py  collect_metrics.py  demo_asr.py  demo_prosody.py  prosody_metrics.csv  test_asr_integration.py  test_components.py  test_endpoint_file_vs_url.py  test_feature_flags.py  test_labels.py  test_nonverbal_min.py  test_nonverbal_static.py  test_prosody_api.py  test_prosody_integration.py  test_schema_roundtrip.py  test_scoring_and_tips.py  test_vad_fallback.py
utils/: __init__.py  cache.py  gpu.py  hashing.py  image_compress.py  logging.py  math.py  model_utils.py
video/: __init__.py  advice_generator.py  audio_utils.py  extract_frames.py  llm_feedback.py  metrics.py  pipeline.py  realtime.py  scoring.py  video_config.py  video_writer.py  websocket_handlers.py
(+24 files in other folders)
