[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oratory-feedback"
version = "0.1.0"
description = "Oratory feedback system with video and audio processing."
authors = [{name = "Oratory Team", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.103.1",
    "uvicorn[standard]==0.23.2",
    "python-multipart==0.0.6",
    "websockets==11.0.3",
    "opencv-python==4.8.0.76",
    "numpy==1.24.3",
    "mediapipe==0.10.3",
    "librosa==0.10.1",
    "soundfile==0.12.1",
    "pydub==0.25.1",
    "webrtcvad==2.0.10",
    "vosk==0.3.45",
    "tensorflow==2.13.0",
    "tensorflow-hub==0.14.0",
    "numba==0.57.1",
    "diskcache==5.6.3",
    "psutil==5.9.5",
    "requests==2.31.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
